--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.0",
     "firebase": "^9.6.6",
     "framer-motion": "6",
+    "nanoid": "^3.3.1",
     "next": "12.0.10",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
